logs/2024-02-01-16-28/build/bioconductor_docker-3.19/x86_64/chipseq
+ Rscript -e 'Sys.setenv(BIOCONDUCTOR_USE_CONTAINER_REPOSITORY=FALSE); p <- .libPaths(); p <- c('\''/tmp/tmp/built'\'', p); .libPaths(p); if(BiocManager::install('\''chipseq'\'', INSTALL_opts = '\''--build'\'', update = TRUE, quiet = FALSE, dependencies=TRUE, force = TRUE, keep_outputs = TRUE) %in% rownames(installed.packages())) q(status = 0) else q(status = 1)'
'getOption("repos")' replaces Bioconductor standard repositories, see
'help("repositories", package = "BiocManager")' for details.
Replacement repositories:
    CRAN: https://cloud.r-project.org
Bioconductor version 3.19 (BiocManager 1.30.22), R Under development (unstable)
  (2024-01-23 r85822)
Installing package(s) 'chipseq'
also installing the dependencies ‘rtracklayer’, ‘BSgenome’, ‘GenomicFeatures’, ‘TxDb.Mmusculus.UCSC.mm9.knownGene’, ‘BSgenome.Mmusculus.UCSC.mm9’

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/rtracklayer_1.63.0.tar.gz'
Content type 'application/x-gzip' length 4018472 bytes (3.8 MB)
==================================================
downloaded 3.8 MB

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/BSgenome_1.71.1.tar.gz'
Content type 'application/x-gzip' length 5909258 bytes (5.6 MB)
==================================================
downloaded 5.6 MB

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/GenomicFeatures_1.55.3.tar.gz'
Content type 'application/x-gzip' length 1181124 bytes (1.1 MB)
==================================================
downloaded 1.1 MB

trying URL 'https://bioconductor.org/packages/3.19/data/annotation/src/contrib/TxDb.Mmusculus.UCSC.mm9.knownGene_3.2.2.tar.gz'
Content type 'application/x-gzip' length 13520331 bytes (12.9 MB)
==================================================
downloaded 12.9 MB

trying URL 'https://bioconductor.org/packages/3.19/data/annotation/src/contrib/BSgenome.Mmusculus.UCSC.mm9_1.4.0.tar.gz'
Content type 'application/x-gzip' length 621955864 bytes (593.1 MB)
==================================================
downloaded 593.1 MB

trying URL 'https://bioconductor.org/packages/3.19/bioc/src/contrib/chipseq_1.53.0.tar.gz'
Content type 'application/x-gzip' length 2440089 bytes (2.3 MB)
==================================================
downloaded 2.3 MB

* installing *source* package ‘rtracklayer’ ...
** using staged installation
checking for pkg-config... /usr/bin/pkg-config
checking pkg-config is at least version 0.9.0... yes
checking for OPENSSL... yes
configure: creating ./config.status
config.status: creating src/Makevars
** libs
using C compiler: ‘gcc (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c S4Vectors_stubs.c -o S4Vectors_stubs.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c IRanges_stubs.c -o IRanges_stubs.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c XVector_stubs.c -o XVector_stubs.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c R_init_rtracklayer.c -o R_init_rtracklayer.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c readGFF.c -o readGFF.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c bbiHelper.c -o bbiHelper.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c bigWig.c -o bigWig.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c bigBedHelper.c -o bigBedHelper.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c bigBed.c -o bigBed.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c chain_io.c -o chain_io.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c twoBit.c -o twoBit.o
gcc -I"/usr/local/lib/R/include" -DNDEBUG -DUSE_SSL -D_FILE_OFFSET_BITS=64 -I'/tmp/tmp/built/S4Vectors/include' -I'/tmp/tmp/built/IRanges/include' -I'/tmp/tmp/built/XVector/include' -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c handlers.c -o handlers.o
handlers.c: In function ‘R_warnHandler’:
handlers.c:10:11: error: format not a string literal and no format arguments [-Werror=format-security]
   10 |   warning(warn_buf);
      |           ^~~~~~~~
cc1: some warnings being treated as errors
make: *** [/usr/local/lib/R/etc/Makeconf:191: handlers.o] Error 1
ERROR: compilation failed for package ‘rtracklayer’
* removing ‘/tmp/tmp/built/rtracklayer’
* installing *source* package ‘chipseq’ ...
** using staged installation
** libs
using C compiler: ‘gcc (Ubuntu 11.4.0-1ubuntu1~22.04) 11.4.0’
gcc -I"/usr/local/lib/R/include" -DNDEBUG   -I/usr/local/include    -fpic  -g -O2 -fstack-protector-strong -Wformat -Werror=format-security -Wdate-time -D_FORTIFY_SOURCE=2 -g  -c rlesumprod.c -o rlesumprod.o
gcc -shared -L/usr/local/lib/R/lib -L/usr/local/lib -o chipseq.so rlesumprod.o -L/usr/local/lib/R/lib -lR
installing to /tmp/tmp/built/00LOCK-chipseq/00new/chipseq/libs
** R
** data
** inst
** byte-compile and prepare package for lazy loading
** help
*** installing help indices
** building package indices
** installing vignettes
** testing if installed package can be loaded from temporary location
** checking absolute paths in shared objects and dynamic libraries
** testing if installed package can be loaded from final location
** testing if installed package keeps a record of temporary installation path
* creating tarball
packaged installation of ‘chipseq’ as ‘chipseq_1.53.0_R_x86_64-pc-linux-gnu.tar.gz’
* DONE (chipseq)
ERROR: dependency ‘rtracklayer’ is not available for package ‘BSgenome’
* removing ‘/tmp/tmp/built/BSgenome’
ERROR: dependency ‘rtracklayer’ is not available for package ‘GenomicFeatures’
* removing ‘/tmp/tmp/built/GenomicFeatures’
ERROR: dependency ‘GenomicFeatures’ is not available for package ‘TxDb.Mmusculus.UCSC.mm9.knownGene’
* removing ‘/tmp/tmp/built/TxDb.Mmusculus.UCSC.mm9.knownGene’
ERROR: dependency ‘BSgenome’ is not available for package ‘BSgenome.Mmusculus.UCSC.mm9’
* removing ‘/tmp/tmp/built/BSgenome.Mmusculus.UCSC.mm9’

The downloaded source packages are in
	‘/tmp/Rtmp500cRM/downloaded_packages’
Old packages: 'commonmark', 'httpuv', 'zip'
Warning messages:
1: In install.packages(...) :
  installation of package ‘rtracklayer’ had non-zero exit status
2: In install.packages(...) :
  installation of package ‘BSgenome’ had non-zero exit status
3: In install.packages(...) :
  installation of package ‘GenomicFeatures’ had non-zero exit status
4: In install.packages(...) :
  installation of package ‘TxDb.Mmusculus.UCSC.mm9.knownGene’ had non-zero exit status
5: In install.packages(...) :
  installation of package ‘BSgenome.Mmusculus.UCSC.mm9’ had non-zero exit status

real	0m52.059s
user	0m43.072s
sys	0m6.256s
